test/asm/interpolation-after-string.err
error: interpolation-after-string.asm(5):
    Unknown character '{'
error: interpolation-after-string.asm(5):
    syntax error, unexpected symbol
while expanding symbol "greeting"
error: interpolation-after-string.asm(5):
    Unknown character '}'
error: interpolation-after-string.asm(8):
    Unknown character '{'
error: interpolation-after-string.asm(8):
    syntax error, unexpected symbol
error: interpolation-after-string.asm(8):
    Unknown character '}'
Assembly aborted with 6 errors!
